// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api poller should return list of 5 condos 1`] = `
Array [
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Bacon ipsum dolor amet pastrami chicken venison, meatball alcatra pork belly short ribs",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Short loin alcatra tail beef burgdoggen hamburger spare ribs meatball kevin sirloin leberkas pork loin prosciutto shankle bresaola",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Sirloin jerky landjaeger leberkas jowl tongue salami capicola sausage cow hamburger picanha ball tip meatball corned beef",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Leberkas fatback meatloaf kielbasa bresaola biltong jowl turkey sausage rump",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Pork chop chuck shank jowl landjaeger",
  },
]
`;

exports[`api poller should return list of 5 houses 1`] = `
Array [
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non",
  },
]
`;

exports[`api poller should return list of 10 condos 1`] = `
Array [
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Bacon ipsum dolor amet pastrami chicken venison, meatball alcatra pork belly short ribs",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Short loin alcatra tail beef burgdoggen hamburger spare ribs meatball kevin sirloin leberkas pork loin prosciutto shankle bresaola",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Sirloin jerky landjaeger leberkas jowl tongue salami capicola sausage cow hamburger picanha ball tip meatball corned beef",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Leberkas fatback meatloaf kielbasa bresaola biltong jowl turkey sausage rump",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Pork chop chuck shank jowl landjaeger",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo Ground loin alcatra tail beef burgdoggen hamburger cupim turducken ham hock venison kielbasa",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo cupim turducken ham hock venison kielbasa tail beef burgdoggen hamburger",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo venison kielbasa beef burgdoggen hamburger spare",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo jerky landjaeger leberkas, cupim turducken ham hock venison kielbasa",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Fancy Condo sirloin capicola, Short loin alcatra tail beef venison kielbasa",
  },
]
`;

exports[`api poller should return list of 10 houses 1`] = `
Array [
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home exercitation ullamco laboris nisi ut aliquip ullamco laboris",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home deserunt mollit anim id est laborum",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home mollit anim id est laborum laboris nisi ut aliquip ex ea commodo",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home qui officia deserunt mollit anim id est laborum amet, consectetur adipisicing elit, sed do eiusmod",
  },
  Object {
    "bath": 6,
    "beds": 6,
    "price": 400,
    "rating": 5,
    "ratingCount": 51,
    "sqFeet": 4500,
    "title": "Luxury Home ipsum dolor sit amet, consectetur deserunt mollit anim id est laborum",
  },
]
`;
